--- a/ch1_all_nmds.Rmd
+++ b/ch1_all_nmds.Rmd
@@ -89,9 +89,9 @@ density_byspecies <- density_raw %>%
    dplyr::summarize(mean_density_100m2 = mean(density_100m2)) %>% 
   rename(species = species_lifestage_datatype)
 
-densitycountbytransect <- density_raw %>%   
-  group_by(site, rep, site_rep, species, status) %>% 
-  dplyr::summarize(density_80m2 = sum(count)) 
+# densitycountbytransect <- density_raw %>%   
+#   group_by(site, rep, site_rep, species, status) %>% 
+#   dplyr::summarize(density_80m2 = sum(count)) 
   
 
 sort(unique(germination_raw$species_diversity))
@@ -228,7 +228,8 @@ nmds_total.nmds2_coord <- nmds_total.nmds2_fit %>%
   as.data.frame() %>% 
   rownames_to_column("species") %>% 
   full_join(., nmds_total.nmds2_pvals, by = "species") %>% 
-  filter(pvals <= 0.05) %>% # <-- set p-value level here: 0.05, 0.008
+  filter(pvals > 0.02) %>% 
+  filter(pvals  <= 0.05) %>% # <-- set p-value level here: 0.05, 0.008
   filter(!species == 'standtype_ID')
 dim(nmds_total.nmds2_coord) # <-- limit number of vectors to <7 for clarity
 #write.csv(nmds_total.nmds2_coord,"Ch1_Degradation_figures/nmds2_pval.1.csv")
@@ -251,9 +252,9 @@ total_nmds2_hillslope_vectors <- ggplot(nmds_total.nmds2_plot %>% # output of sc
                 col = "black") +
    geom_text(data = nmds_total.nmds2_coord, 
              aes(label = species),  
-             position = position_jitter(width = 0.2, height = 0.2), # spp label jitter
+             position = position_jitter(width = 0.4, height = 0.2), # spp label jitter
              size = 3) + # Adjust font size for vector labels
-  labs(x = "NMDS1", y = "NMDS2", title = "Community composition by hillslope percent cover, shrub density, seed density") +
+  labs(x = "NMDS1", y = "NMDS2", title = "Community composition (0.02 < p <=0.05) by hillslope percent cover, shrub density, seed density") +
  theme(axis.text.x = element_text(size = 10),  # Adjust font size for x-axis labels
         axis.text.y = element_text(size = 10),  # Adjust font size for y-axis labels
         axis.title = element_text(size = 12),   # Adjust font size for axis titles
